# bahamut_ani_stat

./: .bandit  .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  Dockerfile  LICENSE  alembic.ini  contributing.html  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  spelling_wordlist.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: daily-recording.yaml  main-updated.yaml  publish-plot.yaml  python-check.yaml  python-publish.yaml  trigger-plot-manually.yaml
alembic/: env.py
alembic/versions/: 3f8f915f67bf_.py
assets/: premium-rate.html
assets/data/anime_trend/: 100033.json  100086.json  100198.json  100317.json  100539.json  101140.json  101412.json  101527.json  101716.json  101806.json  101997.json  102028.json  102038.json  102116.json  102280.json  102289.json  102370.json  102494.json  102570.json  102578.json  102620.json  102651.json  102726.json  102845.json  102935.json  103193.json  103215.json  103323.json  103335.json  103345.json  103427.json  103470.json  103554.json  103555.json  103658.json  103844.json  103847.json  104065.json  104214.json  104281.json  (+1156 more)
assets/plots/: anime.html  new-anime-trend.html  premium-rate.html
bahamut_ani_stat/: __main__.py  config.py  settings.py
bahamut_ani_stat/cli/: anime_filter.js  db_commands.py  options.py  parse_commands.py  plot_commands.py
bahamut_ani_stat/db/: models.py  utils.py
bahamut_ani_stat/parser/: data_types.py  parser.py  urls.py
bahamut_ani_stat/plot/: utils.py
bahamut_ani_stat/plot/static/: anime-filter.js  datatable-anime-filter.js  dropdown-anime-filter.js  new-anime-source-update-dropdown.js
contributing/: index.html
data/: anime.db  new_animes.json  premium_rate.json
data-maintenance/: index.html
docs/: README.md  contributing.md  data-maintenance.md  plots.md  schema-maintenance.md
docs/assets/: premium-rate.html
docs/assets/data/anime_trend/: .json  100174.json  100626.json  100813.json  100839.json  100968.json  101301.json  101403.json  101438.json  101464.json  101498.json  101595.json  101709.json  101812.json  101853.json  101857.json  101881.json  102007.json  102008.json  102022.json  102027.json  102029.json  102036.json  102102.json  102318.json  102378.json  102701.json  102741.json  102782.json  102799.json  102841.json  102857.json  102858.json  103114.json  103211.json  103405.json  103449.json  103489.json  103611.json  103621.json  (+1211 more)
docs/assets/plots/: anime.html  new-anime-trend.html  premium-rate.html
plots/: anime.html  index.html  premium-rate.html
schema-maintenance/: index.html
search/: search_index.json
tasks/: __init__.py  build.py  common.py  doc.py  env.py  git.py  secure.py  style.py  test.py
tests/cli/: test_db_commands.py
tests/db/: test_utils.py
tests/parser/: test_parser.py
tests/parser/data/: animeList.html  animeOutOfSeasonMore.html  animeVideo.html  animeVideo_new_anime.html  animeVideo_with_season_section.html  danmu.json  homePage.html
tests/parser/test_parser/: test_get_all_animes_base_data.yml  test_get_all_base_animes_data.yml  test_get_anime_detail_data_new_anime_.yml  test_get_anime_detail_data_standard_.yml  test_get_anime_detail_data_with_season_section_.yml  test_get_anime_episode_data_new_anime_.yml  test_get_anime_episode_data_standard_.yml  test_get_anime_episode_data_with_season_section_.yml  test_get_anime_list_page_count.yml  test_get_animes_base_data.yml  test_get_base_animes_data.yml  test_get_danmu.yml  test_get_new_animes.yml  test_get_out_of_season_animes.yml  test_get_premium_rate.yml
