[project]
name = "bahamut_ani_stat"
version = "0.9.0"
authors = [{ name = "Wei Lee", email = "weilee.rx@gmail.com" }]
description = "Toolkit for Bahamut ani gamer data"
license = { file = "LICENSE" }
readme = "docs/README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.61.1",
    "dataclasses-json>=0.5.4",
    "lxml>=5.0.0",
    "click>=8.0.1",
    "SQLAlchemy[mypy]>=1.4.0,<2.0.0",
    "bokeh>=3.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.4.0",
    "setuptools>=72.1,<76.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
pelican-stat = "bahamut_ani_stat.__main__:main"

[project.urls]
Documentation = "https://github.com/Lee-W/bahamut_ani_stat/blob/docs/README.md"
Repository = "https://github.com/Lee-W/bahamut_ani_stat"
Issues = "https://github.com/Lee-W/bahamut_ani_stat/issues"
Changelog = "https://github.com/Lee-W/bahamut_ani_stat/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["invoke>=2.2.0"]
test = [
    "coverage[toml]>=7.6.10",
    "pytest-regressions>=2.7.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
    "pytest-datadir>=1.5.0",
    "pytest-sugar>=1.0.0"
]
style = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
    "types-PyYAML>=6.0.12.20240917",
    "types-setuptools>=75.1.0"
]
security = ["bandit>=1.2.2", "pip-audit>=2.7.3"]
git = ["commitizen>=4.1.0", "pre-commit>=4.0.1"]
doc = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[tool.mypy]
files = ["bahamut_ani_stat", "tests"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["bahamut_ani_stat.*"]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false


[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I",     # Missing required import (auto-fixable)
    "UP",    # Pyupgrade
    "PT",    # flake8-pytest-style rules
    "TID25", # flake8-tidy-imports rules
]

ignore = ["E501", "D1", "D415"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
known-first-party = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = "tests"
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv",
]
markers = ["slow"]


[tool.coverage]
[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Don't complain about missing debug-only code:
    'def __repr__',
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    'raise AssertionError',
    'raise NotImplementedError',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if __name__ == .__main__.:',
]
omit = ['env/*', 'venv/*', '*/virtualenv/*', '*/virtualenvs/*', '*/tests/*']
