[project]
name = "bahamut_ani_stat"
version = "0.9.0"
authors = [{ name = "Wei Lee", email = "weilee.rx@gmail.com" }]
description = "Toolkit for Bahamut ani gamer data"
license = { file = "LICENSE" }
readme = "docs/README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.61.1",
    "lxml>=5.0.0",
    "click>=8.0.1",
    "SQLAlchemy>=2.0.0",
    "bokeh>=3.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
pelican-stat = "bahamut_ani_stat.__main__:main"

[project.urls]
Documentation = "https://github.com/Lee-W/bahamut_ani_stat/blob/docs/README.md"
Repository = "https://github.com/Lee-W/bahamut_ani_stat"
Issues = "https://github.com/Lee-W/bahamut_ani_stat/issues"
Changelog = "https://github.com/Lee-W/bahamut_ani_stat/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["poethepoet>=0.45.0"]
test = [
    "coverage[toml]>=7.14.0",
    "pytest-regressions>=2.10.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-httpx>=0.36.2",
    "pytest-datadir>=1.8.0",
    "pytest-sugar>=1.1.1",
]
style = [
    "mypy>=2.1.0",
    "ruff>=0.15.12",
    "types-PyYAML>=6.0.12.20260510",
]
security = ["bandit>=1.9.4", "pip-audit>=2.10.0"]
git = ["commitizen>=4.16.0", "prek>=0.3.13"]
doc = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[tool.mypy]
files = ["bahamut_ani_stat", "tests"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["bahamut_ani_stat.*"]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false


[tool.poe]
executor = { type = "uv" }

[tool.poe.tasks]
# Setup
clean-env = { cmd = "rm -rf .venv", help = "Remove virtual environment" }

# Hooks
hooks = { cmd = "prek run --all-files --hook-stage pre-push", help = "Run all prek hooks" }

# Test
test = { cmd = "pytest", help = "Run test suite" }
test-cov = { cmd = "pytest --cov=bahamut_ani_stat tests/", help = "Run tests with coverage report" }

# Style
ruff-format = { cmd = "ruff format bahamut_ani_stat tests", help = "Format code with ruff" }
ruff-fix = { cmd = "ruff check bahamut_ani_stat tests --fix", help = "Auto-fix lint issues with ruff" }
lint = { cmd = "ruff check bahamut_ani_stat tests", help = "Check lint with ruff" }
mypy = { cmd = "mypy", help = "Type-check with mypy" }
commit-check = { cmd = "cz -nr 3 check --rev-range origin/main..", help = "Check commit messages since main" }

# Security
audit = { cmd = "pip-audit", help = "Audit dependencies for vulnerabilities" }
bandit = { cmd = "bandit -r -iii -lll --ini .bandit", help = "Static security analysis with bandit" }

# Git
commit = { cmd = "cz commit", help = "Interactive conventional commit" }
bump = { cmd = "cz bump -nr 3 --yes", help = "Bump version and update changelog" }

# Build
dist = { cmd = "uv build", help = "Build distribution packages" }
clean = { cmd = "git clean -Xdf", help = "Remove all untracked files listed in .gitignore" }

# Docs
doc-build = { cmd = "mkdocs build --clean", env = { SITE_URL = "http://127.0.0.1:8000" }, help = "Build docs locally" }
doc-build-ci = { cmd = "mkdocs build --clean", help = "Build docs for CI/deployment" }
doc-serve = { cmd = "mkdocs serve", env = { SITE_URL = "http://127.0.0.1:8000" }, help = "Serve docs locally" }
doc-deploy = { cmd = "mkdocs gh-deploy", help = "Deploy docs to GitHub Pages" }

[tool.poe.tasks.setup]
shell = "uv sync --all-groups && prek install -t pre-commit && prek install -t pre-push && prek install -t commit-msg"
help = "Install all dependencies and set up git hooks"

[tool.poe.tasks.format]
sequence = ["ruff-format", "ruff-fix"]
help = "Format and auto-fix code"

[tool.poe.tasks.style]
sequence = ["lint", "mypy"]
help = "Run all style checks"

[tool.poe.tasks.secure]
sequence = ["audit", "bandit"]
help = "Run all security checks"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "I",     # Missing required import (auto-fixable)
    "UP",    # Pyupgrade
    "PT",    # flake8-pytest-style rules
    "TID25", # flake8-tidy-imports rules
]

ignore = ["E501", "D1", "D415"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
known-first-party = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = "tests"
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv",
]
markers = ["slow"]


[tool.coverage]
[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Don't complain about missing debug-only code:
    'def __repr__',
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    'raise AssertionError',
    'raise NotImplementedError',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if __name__ == .__main__.:',
]
omit = ['env/*', 'venv/*', '*/virtualenv/*', '*/virtualenvs/*', '*/tests/*']
